--- a/views/events/newevent.hbs
+++ b/views/events/newevent.hbs
@@ -19,17 +19,20 @@
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="freeCheck">
+                    <input class="form-check-input" type="checkbox" id="freeCheck" name="freeCheck">
                     <label class="form-check-label" for="freeCheck">
                         Free
                     </label>
                 </div>
             </div>
+            <div class="col">
+                <input type="number" class="form-control" name="freeQuantity" id="freeQuantity" placeholder="Quantidade">
+            </div>
         </div>
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="kidCheck">
+                    <input class="form-check-input" type="checkbox" id="kidCheck" name="kidCheck">
                     <label class="form-check-label" for="kidCheck">
                         Crianca
                     </label>
@@ -45,7 +48,7 @@
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="adultCheck">
+                    <input class="form-check-input" type="checkbox" id="adultCheck" name="adultCheck">
                     <label class="form-check-label" for="adultCheck">
                         Adulto
                     </label>
@@ -61,7 +64,7 @@
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="promoCheck">
+                    <input class="form-check-input" type="checkbox" id="promoCheck" name="promoCheck">
                     <label class="form-check-label" for="promoCheck">
                         Promocional
                     </label>
@@ -80,7 +83,7 @@
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="normalCheck">
+                    <input class="form-check-input" type="checkbox" id="normalCheck" name="normalCheck">
                     <label class="form-check-label" for="normalCheck">
                         Normal
                     </label>
@@ -96,7 +99,7 @@
         <div class="form-row">
             <div class="col">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="vipCheck">
+                    <input class="form-check-input" type="checkbox" id="vipCheck" name="vipCheck">
                     <label class="form-check-label" for="vipCheck">
                         VIP
                     </label>
