--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,8 +22,8 @@
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                            <a href="/payments/{{_id}}/{{price}}/{{title}}/{{promoterId.name}}/{{promoterId._id}}" class="btn btn-success">Pagar Via M-Pesa</a>
-                            <button type="button" class="btn btn-outline-warning">Visualizar</button>
+                            <a href="/payments/{{_id}}" class="btn btn-success">Pagar Via M-Pesa</a>
+                            <a href="/{{_id}}" class="btn btn-outline-warning">Visualizar</a>
                         </div>
                     </div>
                 </div>
