--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,10 +67,11 @@ footer p {
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 
-/* Carousel base class */
+/* Carousel base class
 .carousel {
   margin-bottom: 4rem;
 }
+*/
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   bottom: 3rem;
@@ -88,4 +89,37 @@ footer p {
   left: 0;
   min-width: 100%;
   height: 32rem;
+}
+
+
+/*
+ * Custom translucent site header
+ */
+
+.site-header {
+  background-color: rgba(0, 0, 0, .85);
+  -webkit-backdrop-filter: saturate(180%) blur(20px);
+  backdrop-filter: saturate(180%) blur(20px);
+}
+.site-header a {
+  color: #999;
+  transition: ease-in-out color .15s;
+}
+.site-header a:hover {
+  color: #fff;
+  text-decoration: none;
+}
+
+.img-event-cover {
+  background-size: cover;
+  min-width: 100%;
+  height: 32rem;
+}
+
+.bg-dark {
+  background-color: #300032!important;
+}
+.card-title {
+  color: #c43235;
+  font-size: 24px;
 }
