--- a/views/layouts/layoutEvent.handlebars
+++ b/views/layouts/layoutEvent.handlebars
@@ -46,9 +46,6 @@
             <a class="py-2 d-none d-md-inline-block" href="#">Festival</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Concerto</a>
             <a class="py-2 d-none d-md-inline-block" href="#">Festa</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Conferencias</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Palestras</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Moda</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,49 +56,13 @@
 
 <main role="main">
 
-
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="first-slide" src="/images/FB-Cover.jpg" alt="First slide">
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h1></h1>
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="second-slide" src="/images/mfw.png" alt="Second slide">
-                <div class="container">
-                    <div class="carousel-caption">
-
-                    </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-                <img class="third-slide" src="/images/forca.jpg" alt="Third slide">
-                <div class="container">
-                    <div class="carousel-caption text-right">
-
-                    </div>
-                </div>
+    <div class="container-fluid p-0 m-0">
+        <div class="row">
+            <div class="col-md-12">
+                <img src="/images/{{event.mainimage}}" alt="placeholder 960" class="img-fluid img-event-cover" />
             </div>
         </div>
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
     </div>
-
 
     <div class="album py-5 bg-light">
         <div class="container">
@@ -135,7 +96,7 @@
         <p class="float-right">
             <a href="#">Back to top</a>
         </p>
-        <p>Fire Ticket &copy; Time2work</p>
+        <p>Fire Ticket &copy; by Time2work</p>
         <p>Termo e condicoes <a href="../../..">Termo e Condicoes</a> </p>
     </div>
 </footer>
