--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -22,23 +22,23 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-8 col-md-7 py-4">
-                    <h4 class="text-white">About</h4>
-                    <p class="text-muted">Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.</p>
+                    <h4 class="text-black-50">Sobre nos</h4>
+                    <p class="text-muted">Fire Ticket é uma plataforma que permite aos internautas comprar bilhetes e inscreverem-se em eventos que decorrem no território moçambicano a partir da web em qualquer lugar do mundo.</p>
                 </div>
                 <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-white">Contact</h4>
+                    <h4 class="text-black-50">Contacto</h4>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
+                        <li><a href="#" class="text-black-50">Follow on Twitter</a></li>
+                        <li><a href="#" class="text-black-50">Like on Facebook</a></li>
+                        <li><a href="#" class="text-black-50">Email me</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm site-header ">
+    <div class="navbar navbar-dark bg-dark shadow-sm site-header">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a href="/" class="navbar-brand d-flex align-items-center">
+            <a href="/" class="navbar-brand d-flex align-items-center" id="header-title">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
                 <strong>FireTicket</strong>
             </a>
