--- a/views/events/newevent.hbs
+++ b/views/events/newevent.hbs
@@ -159,8 +159,12 @@
     </div>
 
     <div class="form-group">
-        <label for="mainimage">Imagem</label>
-        <input type="file" class="form-control" id="mainimage" name="mainimage">
+        <label for="mainimage">Post Image</label>
+        <input type="file" class="form-control-file" id="mainimage" name="mainimage">
+    </div>
+    <div class="form-group">
+        <label for="widthimage">View Image</label>
+        <input type="file" class="form-control-file" id="widthimage" name="widthimage">
     </div>
     <button type="submit" class="btn btn-primary">Criar Evento</button>
     <br>
