--- a/views/layouts/layoutPayment.handlebars
+++ b/views/layouts/layoutPayment.handlebars
@@ -66,8 +66,8 @@
             <h1 class="jumbotron-heading">{{headerTitle}}</h1>
             <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Fale Connosco</a>
-                <a href="#" class="btn btn-secondary my-2">Fale com o promotor</a>
+                <a href="#" class="btn btn-primary my-2" data-toggle="modal" data-target="#faleconnoscoModal">Fale Connosco</a>
+                <a href="#" class="btn btn-secondary my-2" data-toggle="modal" data-target="#falecompromotorModal">Fale com o promotor</a>
             </p>
         </div>
     </section>
@@ -97,6 +97,47 @@
         <p>Termo e condicoes <a href="../../..">Termo e Condicoes</a> </p>
     </div>
 </footer>
+
+<!-- Modal -->
+<div class="modal fade" id="faleconnoscoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Fale connosco</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{>faleconnosco}}
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Fale com o promotor-->
+<div class="modal fade" id="falecompromotorModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Fale com o promotor</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                {{>falecompromotor}}
+            </div>
+            <div class="modal-footer">
+
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
