--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             <a href="/payments/{{_id}}" class="btn btn-success">Pagar Via M-Pesa</a>
-                            <a href="/{{_id}}" class="btn btn-outline-warning">Visualizar</a>
+                            <a href="/events/{{_id}}" class="btn btn-outline-warning">Visualizar</a>
                         </div>
                     </div>
                 </div>
