--- a/views/partials/falecompromotor.handlebars
+++ b/views/partials/falecompromotor.handlebars
@@ -1,28 +1,28 @@
-<form method="post" action="/educations/{{candidato._id}}/education/new" class="needs-validation" novalidate>
+<form method="post" action="/services/falecompromotor/email" class="needs-validation" novalidate>
     <div class="form-group">
-        <label for="deEmail">De</label>
-        <input type="email" class="form-control" id="deEmail" name="deEmail" placeholder="meu.email@meu.com" required>
+        <label for="fromEmail">De</label>
+        <input type="email" class="form-control" id="fromEmail" name="fromEmail" placeholder="meu.email@meu.com" required>
         <div class="invalid-feedback">
             Deve preencher o seu email.
         </div>
     </div>
     <div class="form-group">
-        <label for="assuntoEmail">Assunto</label>
-        <select class="form-control" name="assuntoEmail">
+        <label for="subjectEmail">Assunto</label>
+        <select class="form-control" name="subjectEmail">
             <option value="publicar">Publicar</option>
             <option value="Bilhete">Bilhete</option>
         </select>
         <div class="invalid-feedback">
-            Nivel obrigatorio. Ex: Mestrado em Gestao.
+            Selecione um assunto antes de enviar o email.
         </div>
     </div>
     <div class="form-group">
         <label for="bodyEmail">Texto</label>
         <textarea class="form-control" name="bodyEmail" id="bodyEmail" rows="5"required></textarea>
         <div class="invalid-feedback">
-            obirgatoria preencher a mensagem.
+            E obrigatorio preencher a mensagem.
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary float-right">Enviar</button>
+    <button type="submit" class="btn btn-success float-right">Enviar</button>
 </form>
