--- a/views/partials/faleconnosco.handlebars
+++ b/views/partials/faleconnosco.handlebars
@@ -1,4 +1,4 @@
-<form method="post" action="/events/faleconnosco/email" class="needs-validation" novalidate>
+<form method="post" action="/services/faleconnosco/email" class="needs-validation" novalidate>
     <div class="form-group">
         <label for="fromEmail">De</label>
         <input type="email" class="form-control" id="fromEmail" name="fromEmail" placeholder="meu.email@meu.com" required>
@@ -20,9 +20,9 @@
         <label for="bodyEmail">Texto</label>
         <textarea class="form-control" name="bodyEmail" id="bodyEmail" rows="5"required></textarea>
         <div class="invalid-feedback">
-            obirgatoria preencher a mensagem.
+            E obrigatorio preencher a mensagem.
         </div>
     </div>
 
-    <button type="submit" class="btn btn-primary float-right">Enviar</button>
+    <button type="submit" class="btn btn-success float-right">Enviar</button>
 </form>
