--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
                             Local: {{local}}
                         </div>
                         <div class="start">
-                            Data: {{startDataTime}}
+                            Data: {{startDateTime}}
                         </div>
                         <div class="start">
                             Categoria: {{category}}
