--- a/views/layouts/layoutPayment.handlebars
+++ b/views/layouts/layoutPayment.handlebars
@@ -64,7 +64,11 @@
     <section class="jumbotron text-center">
         <div class="container">
             <h1 class="jumbotron-heading">{{headerTitle}}</h1>
-            <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+            <p class="lead text-muted">Nunca foi tao facil comprar um bilhete online. Compre via M-Pesa 'e facil, rapido e seguro. Para comprar um bilhete siga os seguites passos:</p>
+            <p class="lead text-muted">1. Selecione o tipo de bilhete que deseja pagar</p>
+            <p class="lead text-muted">2. Selecione a quantidade</p>
+            <p class="lead text-muted">3. Preencha os outros campos (todos)</p>
+            <p class="lead text-muted">4. Desbloquei o Celular e clique em pagar</p>
             <p>
                 <a href="#" class="btn btn-primary my-2" data-toggle="modal" data-target="#faleconnoscoModal">Fale Connosco</a>
                 <a href="#" class="btn btn-secondary my-2" data-toggle="modal" data-target="#falecompromotorModal">Fale com o promotor</a>
