--- a/views/payments/payment.hbs
+++ b/views/payments/payment.hbs
@@ -6,6 +6,7 @@
         <input type="hidden" name="promoter_id" value="{{event.promoterId._id}}">
         <input type="hidden" name="promoter_Name" value="{{event.promoterId.name}}">
         <input type="hidden" name="event_Name" value="{{event.title}}">
+        <input type="hidden" name="startDateTime" value="{{event.startDateTime}}">
         <div class="form-row">
             <div class="form-group col-md-3">
                 <label for="prefix">Prefix</label>
