--- a/views/promoters/listpromoter.hbs
+++ b/views/promoters/listpromoter.hbs
@@ -14,7 +14,7 @@
                 <td>{{name}}</td>
                 <td>{{phoneNumber}}</td>
                 <td>{{email}}</td>
-                <td><a href="/newevent/{{_id}}">Criar Evento</a>, <a href="/backend/promoters/edit/{{_id}}">Editar</a></td>
+                <td><a href="/events/newevent/{{_id}}">Criar Evento</a>, <a href="/backend/promoters/edit/{{_id}}">Editar</a></td>
             </tr>
         {{/each}}
 
